Set up plumbing to support 3-band waveforms